...
        android:layout_height="wrap_content"
        android:text="@string/subtitle_main"
        android:textSize="18sp"
        android:textColor="@color/text_sub"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="200dp"
...
